(fix) [BA-28] Fix styles (#55)